# proc-gen-projects

./: .gitignore  remix_all.py
music_generator/: demo.py  pyproject.toml  tests.py
music_generator/demo_output/midi/: alt_rock.mid  bach-style_organ_fugue.mid  bach_two-voice_invention.mid  bach_variety_seed101.mid  bach_variety_seed202.mid  bach_variety_seed303.mid  baroque_fugue.mid  baroque_passacaglia.mid  blues_rock.mid  classic_rock.mid  classical_sonata_exposition.mid  dark_phrygian.mid  hard_rock.mid  jazz_ballad.mid  modal_celtic_folk.mid  piano_trio.mid  pipeline_full.mid  pipeline_override.mid  pop_rock.mid  rock_blues_rock_a_blues_s811.mid  rock_blues_rock_a_blues_s812.mid  rock_blues_rock_a_blues_s813.mid  rock_classic_rock_a_mixolydia_s801.mid  rock_classic_rock_a_mixolydia_s802.mid  rock_classic_rock_a_mixolydia_s803.mid  rock_pentatonic_minor_e_s821.mid  rock_pentatonic_minor_e_s822.mid  rock_pentatonic_minor_e_s823.mid  romantic_waltz.mid  string_quartet.mid  theme_fugue_subject_B_minor.mid  theme_motif_G_major.mid  theme_none_D_minor.mid  wind_quintet.mid
music_generator/music_generator/: __init__.py  _melodic_variation.py  _voice_styler.py  compose.py  ir.py  transforms.py
remixer/: demo.py  pyproject.toml  tests.py
remixer/remixer/: __init__.py  pipeline.py  presets.py
rpg_engine/: CLAUDE.md  README.md  demo.py  gameengine.py  pyproject.toml  tests.py
rpg_engine/.claude/: settings.local.json
rpg_engine/engine/: runtime.py
rpg_engine/engine/core/: ecs.py  state.py  world.py
rpg_engine/procgen_domain/: __init__.py
story_generator/: demo.py  pyproject.toml
story_generator/story_generator/: __init__.py
(+48 files in other folders)
