[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-engine"
version = "0.1.0"
description = "Procedurally generated JRPG engine"
requires-python = ">=3.8"
dependencies = ["procgen", "pygame"]

# Install (editable):
#   pip install -e ../procgen
#   pip install -e .
