[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "story-generator"
version = "0.1.0"
description = "Procedural story and narrative generation"
requires-python = ">=3.8"
dependencies = ["procgen"]

# Install (editable):
#   pip install -e ../procgen
#   pip install -e .
